add api permission.
